k8s/backend-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-deployment
  namespace: multi-service-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      imagePullSecrets:
        - name: ecr-secret
      containers:
        - name: worker-service
          image: -AWSID-.dkr.ecr.us-east-1.amazonaws.com/worker-service:latest
          imagePullPolicy: Always # Never - will Ensure it uses the local image and not pulling from a registry
          ports:
            - containerPort: 5002
          resources:
            requests:
              cpu: "250m"
              memory: "256Mi"
            limits:
              cpu: "500m"
              memory: "512Mi"
