k8s/test-busybox-pod.yml
apiVersion: v1
kind: Pod
metadata:
  name: busybox
  namespace: flask-app
spec:
  containers:
  - name: busybox
    image: busybox:latest
    command:
    - sh
    - -c
    - "while true; do echo Hello, Kubernetes!; sleep 3600; done"
    resources:
      requests:
        memory: "64Mi"
        cpu: "100m"
      limits:
        memory: "128Mi"
        cpu: "200m"
    stdin: true
    tty: true
