k8s/test-sqlclient.yml
apiVersion: v1
kind: Pod
metadata:
  name: mysql-test
  namespace: flask-app
spec:
  containers:
  - name: mysql-client
    image: mysql:8.0
    command:
    - sleep
    - "3600"
    resources:
      requests:
        memory: "128Mi"
        cpu: "100m"
      limits:
        memory: "256Mi"
        cpu: "200m"
    stdin: true
    tty: true
