k8s/database-service.yml
apiVersion: v1
kind: Service
metadata:
  name: mysql
  namespace: flask-app
spec:
  ports:
    - port: 3306
      targetPort: 3306
  selector:
    app: mysql
  type: ClusterIP
