k8s/frontend-service.yml
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
  namespace: flask-app
spec:
  type: NodePort
  selector:
    app: frontend
  ports:
    - port: 5001
      targetPort: 5001
      nodePort: 30007
